# kakesu

./: .gitignore  .textlintrc.json  AGENTS.md  MANIFEST.md  Makefile  README.md  SHA256SUMS  package.json  pnpm-lock.yaml  project.yaml
.codex/: config.toml
.githooks/: pre-commit
core/: README.md  go.mod
docs/: 00-agent-harness.md  00-kakesu.md  01-domain-model.md  02-task-lifecycle.md  03-agent-lifecycle.md  03-runtime-and-responses-api.md  04-built-in-agents.md  04-runtime-and-responses-api.md  04-tools-and-async.md  05-runtime-and-responses-api.md  06-long-term-memory.md  06-tools-and-async.md  07-governance.md  07-long-term-memory.md  07-semantic-wiki-schema.md  08-long-term-memory.md  08-running-example.md  09-data-model.md  09-running-example.md  09-semantic-wiki-schema.md  10-data-model.md  10-implementation-and-tests.md  10-running-example.md  11-data-model.md  11-implementation-and-tests.md  12-implementation-and-tests.md  13-technology-stack.md  99-glossary-index.md  AGENTS.md  glossary.yml
governance/: Cargo.toml  README.md
governance/src/: lib.rs  lifecycle.rs  main.rs  message.rs  policy.rs  wire_config.rs
governance/tests/: message_contract.rs  wire_config.rs  wire_fixtures.rs
memory/: README.md  pyproject.toml
memory/src/kakesu_memory/: __init__.py  contracts.py  message.py  openai_runner.py  service.py  wire_config.py
memory/tests/: test_message.py  test_service.py  test_wire_config.py  test_wire_fixtures.py
schemas/: AGENTS.md  README.md  authority-tools.json  built-in-agent-outputs.json  domain-types.ts  judge-tools.json  (+1 more)
(+194 files in other folders)
