[package]
name = "kakesu-governance"
version = "0.1.0"
edition = "2021"
rust-version = "1.79"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
