[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kakesu-memory"
version = "0.1.0"
description = "Memory Plane service for kakesu"
requires-python = ">=3.12"
dependencies = [
  "openai-agents>=0.14,<1",
]

[dependency-groups]
dev = [
  "pytest>=9,<10",
  "ruff>=0.15,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kakesu_memory"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
